--- a/lesson 1/easy/index.html
+++ b/lesson 1/easy/index.html
@@ -3,10 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 		
-	<link rel="stylesheet" href="">
 
 	<script src="js/script.js"></script>
 	
